[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Level.gd" type="Script" id=1]
[ext_resource path="res://themes/MainTheme.tres" type="Theme" id=2]

[node name="Level" type="Control"]
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1900.0
margin_bottom = 1060.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1880.0
margin_bottom = 86.0

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 745.0
margin_bottom = 81.0
text = "Survival Tutorial"

[node name="CountdownLabel" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 1147.0
margin_top = 5.0
margin_right = 1574.0
margin_bottom = 81.0
size_flags_horizontal = 10
text = "Countdown"

[node name="CountdownSpinBox" type="SpinBox" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 1578.0
margin_right = 1880.0
margin_bottom = 86.0
max_value = 400.0
editable = false

[node name="Board" type="Control" parent="MarginContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 1880.0
margin_bottom = 954.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GridBoard" type="GridContainer" parent="MarginContainer/VBoxContainer/Board"]
margin_right = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GiveUp_btn" type="Button" parent="MarginContainer/VBoxContainer"]
margin_top = 958.0
margin_right = 296.0
margin_bottom = 1040.0
size_flags_horizontal = 0
size_flags_vertical = 8
text = "Give Up"

[connection signal="pressed" from="MarginContainer/VBoxContainer/GiveUp_btn" to="." method="_on_GiveUp_btn_pressed"]
